# androbot

./: adb_utils.py  pyproject.toml  server.py
server/: main.py
server/route/appium/: client.py  mcp.py
server/route/appium/client/: client.py
server/route/appium/data/: som.py
server/route/appium/screen/: screen.py  ui_element.py
server/route/appium/util/: box_utils.py  utils.py
server/route/gplay/: mcp.py
server/route/gplay/data/: app_details.py
